objects/JBCXM__GSRelationshipAssociation__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Config__c</fullName>
        <label>Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <label>Entity Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Entity__c</fullName>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>RelationshipAssociation</relationshipLabel>
        <relationshipName>RelationshipAssociation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Relationship Association</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RelationshipAssociation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>